<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_baseline_settings_backup_restor"
        android:title="@string/restore"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_baseline_tune"
        android:title="@string/filter"
        app:showAsAction="ifRoom" >

        <menu>
            <item android:id="@+id/filter_muscle"
                android:icon="@drawable/ic_baseline_chevron_right_24"
                android:title="@string/muscle_group"
                app:showAsAction="never"/>

            <item android:id="@+id/filter_difficulty"
                android:icon="@drawable/ic_baseline_chevron_right_24"
                android:title="@string/difficulty"
                app:showAsAction="never"/>

            <item android:id="@+id/filter_alphabetic"
                android:icon="@drawable/ic_baseline_chevron_right_24"
                android:title="@string/alphabetic"
                app:showAsAction="never"/>

            <item android:id="@+id/filter_selection"
                android:icon="@drawable/ic_baseline_chevron_right_24"
                android:title="@string/your_selection"
                app:showAsAction="never"/>

        </menu>

    </item>




</menu>