<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="exercise"
            type="com.example.workoutplan.data.entity.Exercise" />

        <variable
            name="exercisePageViewModel"
            type="com.example.workoutplan.viewmodels.ExercisePageViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:fitsSystemWindows="true"
        tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:animateLayoutChanges="true"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/show_toolbar"

            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="?attr/colorPrimary"
                app:exerciseTitle="@{exercisePageViewModel.exercise}"
                app:titleEnabled="true"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:background="#E1EDF3"
                    android:contentDescription="@string/exercise_detail_image_content_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    app:exerciseImage="@{exercisePageViewModel.exercise}"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/ic_deadlift" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_exercise_detail"
                    app:navigationIcon="@drawable/ic_detail_back"
                    app:titleTextColor="?attr/colorOnSurface" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/exercise_detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="72dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_normal">

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/simple_line"
                    android:alpha="0.5"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/exercise_mg_headline"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/category"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/exercise_d_headline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/divider2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/exercise_d_headline"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/exercise_mg_headline"
                    app:layout_constraintTop_toTopOf="@id/exercise_mg_headline" />

                <ImageView
                    android:id="@+id/exercise_mg_image"
                    android:layout_width="@dimen/image_icon_exercise_description"
                    android:layout_height="@dimen/image_icon_exercise_description"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/exercise_image_of_muscle_group_content_description"
                    app:exerciseCategoryImage="@{exercisePageViewModel.exercise}"
                    app:layout_constraintEnd_toStartOf="@+id/exercise_d_headline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exercise_mg_headline"
                    tools:src="@drawable/ic_baseline_local_fire" />

                <ImageView
                    android:layout_width="@dimen/image_icon_exercise_description"
                    android:layout_height="@dimen/image_icon_exercise_description"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/exercise_image_of_difficulty_content_description"
                    app:exerciseDifficultyImage="@{exercisePageViewModel.exercise}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/exercise_mg_headline"
                    app:layout_constraintTop_toBottomOf="@id/exercise_d_headline"
                    tools:src="@drawable/ic_expert" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/exercise_mg"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:exerciseCategoryText="@{exercisePageViewModel.exercise}"
                    app:layout_constraintEnd_toStartOf="@+id/exercise_d_headline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exercise_mg_image"
                    tools:text="@string/strength" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/simple_line"
                    android:alpha="0.5"
                    app:layout_constraintTop_toBottomOf="@id/exercise_mg" />


                <TextView
                    android:id="@+id/exercise_m_headline"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/muscle_group"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_mg" />

                <ImageView
                    android:id="@+id/exercise_m_image"
                    android:layout_width="@dimen/image_icon_exercise_muscle_description"
                    android:layout_height="@dimen/image_icon_exercise_muscle_description"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/exercise_image_of_muscle_group_content_description"
                    app:exerciseMuscleGroupImage="@{exercisePageViewModel.exercise}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_m_headline"
                    tools:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/exercise_m"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:exerciseMuscleGroup="@{exercisePageViewModel.exercise}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exercise_m_image"
                    tools:text="@string/back" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/exercise_d"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{exercisePageViewModel.exercise.description}"
                    app:exerciseDifficulty="@{exercisePageViewModel.exercise}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/exercise_mg_headline"
                    app:layout_constraintTop_toTopOf="@id/exercise_mg"
                    tools:text="@string/beginner" />


                <TextView
                    android:id="@+id/exercise_page_description_headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_m" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/simple_line"
                    android:alpha="0.5"
                    app:layout_constraintTop_toBottomOf="@id/exercise_m" />

                <TextView
                    android:id="@+id/exercise_page_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:exerciseDescription="@{exercisePageViewModel.exercise}"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exercise_page_description_headline"
                    tools:text="@string/lorem_ipsum" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/exercise_page_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginVertical="16dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:icon="@drawable/ic_baseline_info"
                    app:cornerRadius="@dimen/icon_size"
                    android:textAllCaps="true"
                    android:text="@string/more_info" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>