<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="workoutInputViewModel"
            type="com.example.workoutplan.viewmodels.SetupWorkoutTitleViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_workout_input"
            app:title="@string/workout_detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:id="@+id/workout_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workout_title"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            android:textSize="30sp"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/workout_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            app:boxBackgroundColor="?attr/colorSurface"
            android:paddingHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            app:layout_constraintTop_toBottomOf="@id/workout_title_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/workout_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="textCapSentences|textAutoCorrect"
                android:imeOptions="actionNext"
                android:textSize="40sp"
                android:text="@{workoutInputViewModel.workoutName}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/next"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginBottom="8dp"
            android:enabled="@{workoutInputViewModel.nextButtonEnabled}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> workoutInputViewModel.onNavigateNext()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>